--- a/views/create-job.ejs
+++ b/views/create-job.ejs
@@ -32,7 +32,7 @@
           <div class="card-body">
             <h5 class="card-title">Basic Package</h5>
             <div class="mb-2">
-              <label for="basic_price" class="form-label">Price (KES)</label>
+              <label for="basic_price" class="form-label">Price ($)</label>
               <input
                 type="number"
                 class="form-control"
@@ -86,7 +86,7 @@
           <div class="card-body">
             <h5 class="card-title">Standard Package</h5>
             <div class="mb-2">
-              <label for="standard_price" class="form-label">Price (KES)</label>
+              <label for="standard_price" class="form-label">Price ($)</label>
               <input
                 type="number"
                 class="form-control"
@@ -140,7 +140,7 @@
           <div class="card-body">
             <h5 class="card-title">Premium Package</h5>
             <div class="mb-2">
-              <label for="premium_price" class="form-label">Price (KES)</label>
+              <label for="premium_price" class="form-label">Price ($)</label>
               <input
                 type="number"
                 class="form-control"
@@ -190,7 +190,7 @@
       </div>
     </div>
     <div class="mb-3">
-      <label for="budget" class="form-label">Overall Job Budget (in KES)</label>
+      <label for="budget" class="form-label">Overall Job Budget (in $)</label>
       <input
         type="number"
         class="form-control"
